различные тесты на Python
в gitignore добавил файл конфига на будущее

--- a/ajax_python_test.html
+++ b/ajax_python_test.html
@@ -28,7 +28,7 @@
                     // if (event.which === 1)  {
 
                         // Куда передаём данные и отекда будем ждать ответ (скрипт *.py)
-                        let link = "ajax_python_test.py";
+                        let link = "py/ajax_python_test.py";
 
                         // Данные, которые передаём
                         let reqData = {
