--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
 <div id="vertical" style="height:100%;" data-role="splitter" class="k-widget k-splitter">
-    <div id="top-panel" role="group" class="k-pane k-scrollable" style="position: absolute; top: 0px; /*height: 897px; width: 1918px;*/">
+    <div id="top-panel" role="group" class="k-pane k-scrollable" style="position: absolute; top: 0px;  /*height: 897px;*/ /*width: 100%;*/">
         <div id="panelgrid" style="height: 867px;">
             <div id="grid" data-role="grid" class="k-grid k-widget k-display-block k-reorderable" style="height: 867px;">
                 <div class="k-header k-grid-toolbar">
@@ -191,10 +191,10 @@
                                 <col style="width:87px">
                                 <col style="width:104px">-->
                                 <col style="width:186px">
-                                <col style="width:52px">
+                                <!--<col style="width:52px">
                                 <col style="width:34px">
                                 <col style="width:34px">
-                                <col style="width:52px">
+                                <col style="width:52px">-->
                                 <!--<col style="width:69px">
                                 <col style="width:69px">
                                 <col style="width:52px">
@@ -258,12 +258,12 @@
                                         </a>-->
                                         <a class="k-link" href="">Примечания</a>
                                     </th>
-                                    <th scope="col" role="columnheader" data-field="DATE_CREATE" aria-haspopup="true" rowspan="1" data-title="Переведен" aria-label="Переведен Press ctrl + space to group" data-aggregates="count" data-index="12" id="4613db12-e8e0-40df-8498-a93a3063df64" title="Дата тек. статуса" class="k-header k-with-icon k-filterable" data-role="columnsorter"><a class="k-grid-filter" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#" title="фильтровать" aria-label="фильтровать" tabindex="-1"><span class="k-icon k-i-filter"></span></a><a class="k-link" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#">Переведен</a>
+                                    <!--<th scope="col" role="columnheader" data-field="DATE_CREATE" aria-haspopup="true" rowspan="1" data-title="Переведен" aria-label="Переведен Press ctrl + space to group" data-aggregates="count" data-index="12" id="4613db12-e8e0-40df-8498-a93a3063df64" title="Дата тек. статуса" class="k-header k-with-icon k-filterable" data-role="columnsorter"><a class="k-grid-filter" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#" title="фильтровать" aria-label="фильтровать" tabindex="-1"><span class="k-icon k-i-filter"></span></a><a class="k-link" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#">Переведен</a>
                                     </th>
                                     <th scope="col" role="columnheader" data-field="SLA_LIGHT" aria-haspopup="true" rowspan="1" data-title="SLA" aria-label="SLA Press ctrl + space to group" data-aggregates="count" data-index="13" id="cfe08601-e08d-4b65-b817-9e85d1e3a8a8" title="SLA" class="k-header" data-role="columnsorter"><a class="k-link" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#">SLA</a></th><th scope="col" role="columnheader" data-field="DATE_PLAN_END" aria-haspopup="true" rowspan="1" data-title="Пл.оконч." aria-label="Пл.оконч. Press ctrl + space to group" data-aggregates="count" data-index="14" id="cec94d47-0e3d-4fe8-98d7-872e519fcc38" title="Дата планового окончания" class="k-header k-with-icon k-filterable k-sorted" data-role="columnsorter" data-dir="asc" aria-sort="ascending"><a class="k-grid-filter" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#" title="фильтровать" aria-label="фильтровать" tabindex="-1"><span class="k-icon k-i-filter"></span></a><a class="k-link" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#">Пл.оконч.<span class="k-icon k-i-sort-asc-sm"></span></a>
                                     </th>
                                     <th scope="col" role="columnheader" data-field="DAY_PLAN_END" aria-haspopup="true" rowspan="1" data-title="Ост.дней" aria-label="Ост.дней Press ctrl + space to group" data-aggregates="count" data-index="15" id="9a8b44e3-d89b-4079-abcb-d63890914784" title="Осталось дней" class="k-header k-with-icon k-filterable" data-role="columnsorter"><a class="k-grid-filter" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#" title="фильтровать" aria-label="фильтровать" tabindex="-1"><span class="k-icon k-i-filter"></span></a><a class="k-link" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#">Ост.дней</a>
-                                    </th>
+                                    </th>-->
                                     <!--<th scope="col" role="columnheader" data-field="SHORT_NAME_TEAM" aria-haspopup="true" rowspan="1" data-title="Команда" aria-label="Команда Press ctrl + space to group" data-aggregates="count" data-index="16" id="29724011-adcb-4956-ba07-1ab35ef28084" title="Команда" class="k-header k-with-icon k-filterable" data-role="columnsorter"><a class="k-grid-filter" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#" title="фильтровать" aria-label="фильтровать" tabindex="-1"><span class="k-icon k-i-filter"></span></a><a class="k-link" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#">Команда</a>
                                     </th>
                                     <th scope="col" role="columnheader" data-field="NAME_TEAM" aria-haspopup="true" rowspan="1" data-title="Команда" aria-label="Команда Press ctrl + space to group" data-aggregates="count" data-index="17" id="ab1a1b78-d41f-4ddd-8a4e-4d3fe27df456" title="Команда" class="k-header k-with-icon k-filterable" data-role="columnsorter"><a class="k-grid-filter" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#" title="фильтровать" aria-label="фильтровать" tabindex="-1"><span class="k-icon k-i-filter"></span></a><a class="k-link" href="http://kraz-s-sdsrv.hq.root.ad/SD/SD_Reports/Rep_070?id_res=130933&amp;idNode=149978#">Команда</a>
@@ -389,7 +389,7 @@
                                         При подключении к ноутбуку нет видео сигнала.
                                     </div>
                                 </td>
-                                <td class="" role="gridcell">
+                                <!--<td class="" role="gridcell">
                                     19.11.20 09:06
                                 </td>
                                 <td style="font-weight:700; color:red;;" class="" role="gridcell">
@@ -404,7 +404,7 @@
                                 </td>
                                 <td style="font-weight:700; color:red;" class="" role="gridcell">
                                     -07д.01ч.
-                                </td>
+                                </td>-->
                                 <!--<td class="" role="gridcell">
                                     <div id="TEAM" style="cursor:pointer;" title="Информация по заявке">
                                         Тех.поддержка г.Тайшет
@@ -491,7 +491,7 @@
                                 <td class="" role="gridcell">
                                     Объект не указан
                                 </td>-->
-                                <td class="" role="gridcell">
+                               <!-- <td class="" role="gridcell">
                                     <div class="note">
                                         Требуется подключение монитора экрана к ноутбуку
                                     </div>
@@ -511,7 +511,7 @@
                                 </td>
                                 <td style="font-weight:700; color:green;" class="" role="gridcell">
                                     03д.18ч.
-                                </td>
+                                </td>-->
                                 <!--<td class="" role="gridcell">
                                     <div id="TEAM" style="cursor:pointer;" title="Информация по заявке">
                                         Тех.поддержка г.Тайшет
