test простой быстрый поиск в mariadb на ajax через python с возвратом результата в html

--- a/ajax_mariadb_python_test.html
+++ b/ajax_mariadb_python_test.html
@@ -51,7 +51,7 @@
                             // Действие, при ответе с сервера
                             success: function (res) {
                                 // Выводим в консоль
-                                // console.log(res);
+                                 console.log(res);
                                 // console.log(res.data);
 
                                 //$("#in2").html(res);
