файлы, которые из Excel заносят в БД данные (часть)
В интерфейсе сделано дерево отделов

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
 		<link href="./css/rep_070.css" rel="stylesheet">
        <!-- <link href="./css/theme.default.min.css" rel="stylesheet" type="text/css">-->
+        <!--Свои стили (!!!временно, перенести потом в один)-->
+        <link href="./css/style.css" rel="stylesheet" type="text/css">
 
         <div id="header1" class="container-fluid" style="padding:.3em .3em 0;background-color: #1984c8; color:#fff;">
             <div id="panelfind" class="float-left">
