--- a/index.html
+++ b/index.html
@@ -395,6 +395,8 @@
 
     <!-- Подключили файл с JS функциями -->
     <script src="js/functions.js"></script>
+    <!-- Подключили файл с JS для DnD -->
+    <script src="js/DragManager.js"></script>
 
     <!-- Подключили скрипт сортировки -->
     <script>
@@ -402,6 +404,8 @@
             $("#myTable").tablesorter();
         });
     </script>
+
+
 
 </div>
 
