--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                 </div>
 
-                <!-- Дополнительное меню с кнопки, например для разделения по типам -->
+                <!-- Дополнительное меню с кнопками, например для разделения по типам -->
                 <!-- Если надо, чтобы кнопка была неактивной, добавим класс k-state-disabled -->
                 <div id="main_window_header" class="k-grouping-header" data-role="droptarget">
                 </div>
