новый шаблон, работает перенос сотрудников по департаментам DnD
работает перенос департаментов туда сюда

--- a/ajax_mariadb_python_test.html
+++ b/ajax_mariadb_python_test.html
@@ -7,7 +7,7 @@
         <script type="text/javascript">
             // $(document).ready(function(){
             //     $('#form').submit(function(event){
-            //         $.post("ajax_python_test.py",{data:$("#in1").val()},onResponse);
+            //         $.post("test_ajax_python.py",{data:$("#in1").val()},onResponse);
             //         return false;
             //     })
             //     function onResponse(data){
