--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 
-	<head>
+<html style="" class="">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-		<title>My Oh My</title>
+	<title>Справочник v2.0</title>
+
+	<link rel="shortcut icon" type="image/x-icon" href="./imgs/favicon.ico">
+	<link href="./css/Site.css" rel="stylesheet" type="text/css">
+
+
 
 		<link rel="stylesheet" type="text/css" href="css2/custom.css" />
 		<link rel="stylesheet" type="text/css" href="css2/demo.css" />
