форма в диалоговом окне

--- a/index.html
+++ b/index.html
@@ -234,8 +234,63 @@
             </ul>
         </div>
 
-        <div id="dialogWindow" title="Basic dialog">
-            <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
+        <div id="dialogWindow">
+            <table>
+				<tr>
+					<td>
+						ФИО<br>
+						<input id="worker_name" type="text">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Таб ном<br>
+						<input id="tabel_nom" type="text">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Тел личн<br>
+						<input id="tel" type="tel">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Дата трудоустройства<br>
+						<input type="date">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Дата рождения<br>
+						<input type="date">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						E-mail<br>
+						<input type="email">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Account<br>
+						<input type="text">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Должность<br>
+						<input type="text">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Отдел<br>
+						<input type="search">
+					</td>
+				</tr>
+			</table>
         </div>
 
 
@@ -371,8 +426,13 @@
 
         <script>
             $( function() {
-                $( "#dialogWindow" ).dialog();
-            } );
+                $( "#dialogWindow" ).dialog({
+					fontSize: "11px",
+					color: "rgb(81, 89, 103)",
+					width: "auto",
+					title: "Заголовок диалога"
+				});
+            });
         </script>
 
     </body>
