--- a/index.html
+++ b/index.html
@@ -430,7 +430,12 @@
 					fontSize: "11px",
 					color: "rgb(81, 89, 103)",
 					width: "auto",
-					title: "Заголовок диалога"
+					title: "Заголовок диалога",
+
+                    /*create: function(event, ui) {
+                        var widget = $(this).dialog("widget");
+                        $(".ui-dialog-titlebar-close span", widget).removeClass("ui-icon-closethick").addClass("ui-icon-minusthick");
+                    }*/
 				});
             });
         </script>
